--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 DATABASE = testdb
-DATABASE_HOST = localhost
-DATABASE_ROOT = root
+DATABASE_HOST = ezbuy.mysql.database.azure.com
+DATABASE_ROOT = enelrith
 DATABASE_PASSWORD = A07102000a
-DATABASE_PORT = 3308
+DATABASE_PORT = 3306
